# StrayGL

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  vcpkg.json
.github/workflows/: build.yml  c-cpp.yml
3thparty/: CMakeLists.txt
3thparty/GLAD/include/glad/: glad.h
3thparty/GLAD/src/: glad.c
assets/shaders/: fragment.shader  vertex.shader
cmake/: ConfigureDependencies.cmake
examples/: CMakeLists.txt
examples/basic/: basicExample.cpp
include/StrayGL/: Logger.hpp  StrayGL.hpp  app.hpp  pch.h
include/StrayGL/Renderer/: IRenderer.hpp  OpenGLRenderer.hpp  RendererFactory.hpp
src/: Logger.cpp  app.cpp
src/Core/: app.cpp
src/Renderer/: OpenGLRenderer.cpp  RendererFactory.cpp
src/Renderer/OpenGL/: OpenGLDrawing.cpp  OpenGLRenderer.cpp
